fixed vertical alignment of logout icon

--- a/css/style.css
+++ b/css/style.css
@@ -791,7 +791,7 @@ input {
 
 .profile__logout {
   display: inline-block;
-  vertical-align: middle;
+  vertical-align: top;
   width: 20px;
   height: 17px;
   transform: translateY(3px);
